<resources>
    <string name="app_name">Beer Buddy</string>
    <string name="searchLabel">Search beer</string>
    <string name="start">Start</string>
    <string name="go">Find Beer</string>
    <string name="placeholder">text here</string>
    <string name="results">Results</string>
    <string name="nameHint">Beer Name</string>
    <string name="dateHint">MM / YYYY</string>
    <string name="hpbLabel">HPB</string>
    <string name="searchText">Search for beer:</string>
    <string name="dateLabel">Search by date range:</string>
    <string name="placeholder2"> </string>
</resources>