<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/goButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/searchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_prime_bold"
            android:text="@string/searchText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/beerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/courier_prime_italic"
            android:hint="@string/nameHint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchTitle" />

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/courier_prime_bold"
            android:text="@string/dateLabel"
            app:layout_constraintBottom_toTopOf="@+id/tableRow2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beerName" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/hpb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateLabel">

            <EditText
                android:id="@+id/startDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/courier_prime_italic"
                android:hint="@string/dateHint"
                android:imeOptions="actionNext"
                android:inputType="date" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="to" />

            <EditText
                android:id="@+id/endDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/courier_prime_italic"
                android:hint="@string/dateHint"
                android:imeOptions="actionDone"
                android:inputType="date" />
        </TableRow>

        <Switch
            android:id="@+id/hpb"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="30dp"
            android:focusable="false"
            android:fontFamily="@font/courier_prime_italic"
            android:text="@string/hpbLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:focusable="false"
        android:fontFamily="@font/courier_prime_bold"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>